# LeaveManagement-MCP-Server

./: Makefile  README.md  pyproject.toml  requirements.txt  test.py
src/: main.py
src/tests/: test_main.py
