[project]
name = "leavemanagement-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.4",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
